fixed gap

--- a/src/style/home-beneifts.css
+++ b/src/style/home-beneifts.css
@@ -81,13 +81,12 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
-  align-self: center;
+  justify-content: center;
   align-items: center;
   gap: 10px;
   transition: 0.3s;
-  padding-top: 040px;
-
-  padding-bottom: 040px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   padding-left: 0px;
 }
 .header-div-features {
